--- a/eap7.3-rhel7.yml
+++ b/eap7.3-rhel7.yml
@@ -22,6 +22,12 @@
     ansible_pkg_mgr: yum
     jboss_home: /opt/jboss-as/jboss-eap-7.3/
 
+    jboss_eap_base_version: 7.3
+    jboss_eap_artifact_name: jboss-eap-7.3.0.zip
+    jboss_eap_patch_artifact_name: jboss-eap-7.3.6-patch.zip
+    jboss_eap_artifact_source: https://access.redhat.com/jbossnetwork/restricted/softwareDownload.html?softwareId=80101
+    jboss_eap_patch_artifact_source: https://access.redhat.com/jbossnetwork/restricted/softwareDownload.html?softwareId=95421
+
   collections:
     - wildfly.jcliff
 
