--- a/eap7.3-centos7.yml
+++ b/eap7.3-centos7.yml
@@ -15,12 +15,49 @@
       private: yes
   
   vars:
+    app_url: http://people.redhat.com/~rpelisse/simple-webapp.war
+    app: /tmp/simple-webapp.war
+    jboss_home: /opt/jboss-as/jboss-eap-7.3/
+
     jboss_eap_base_version: 7.3
     jboss_eap_artifact_name: jboss-eap-7.3.0.zip
     jboss_eap_patch_artifact_name: jboss-eap-7.3.6-patch.zip
     jboss_eap_artifact_source: https://access.redhat.com/jbossnetwork/restricted/softwareDownload.html?softwareId=80101
     jboss_eap_patch_artifact_source: https://access.redhat.com/jbossnetwork/restricted/softwareDownload.html?softwareId=95421
+    
+    jboss_eap_apply_patch: false
 
+  collections:
+    - wildfly.jcliff
+  
   roles:
-    #- redhat-cop.jboss_common
+    - redhat-cop.jboss_common
     - redhat-cop.jboss_eap
+    - jcliff
+
+  tasks:
+    - name: "Download a demo app to deploy"
+      get_url:
+        url: "{{ app_url }}"
+        dest: "{{ app }}"
+
+    - jcliff:
+        wfly_home: "{{ jboss_home }}"
+        timeout: 7000
+        subsystems:
+          - system_properties:
+              - name: jcliff.enabled
+                value: 'enabled.plus'
+          - deployments:
+              - name: simple-webapp
+                path: /tmp/simple-webapp.war
+          - datasources:
+              - name: ExampleDS2
+                use_java_context: 'true'
+                jndi_name: java:jboss/datasources/ExampleDS2
+                connection_url: "jdbc:h2:mem:test2;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE"
+                driver_name: h2
+
+    - name: "Restart Wildfly"
+      command: "{{ jboss_home }}/bin/jboss-cli.sh --connect --command=':reload'"
+      register: cli_result
